# porgi

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust_ci.yml
src/: config.rs  main.rs  project.rs  tui.rs
src/tui/: mod.rs  project_table.rs
tests/test_projects/test_project_a/: README.md
