[package]
name = "porgi"
version = "0.1.0"
edition = "2021"

description = "A simple cli TUI for finding and organizing your code projects"

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dirs = "5.0.1"
eyre = "0.6.12"
futures = "0.3.30"
git2 = "0.18.3"
ignore = "0.4.22"
itertools = "0.12.1"
ratatui = { version = "0.26.2", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0.200", features = ["derive"] }
shellexpand = "3.1.0"
tokio = { version = "1.39.3", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
toml = "0.8.12"
walkdir = "2.5.0"
