[package]
name = "porgi"
version = "0.3.0"
edition = "2021"

description = "A simple cli TUI for finding and organizing code projects"
authors = ["Andrew McHarg <amcharg@gmail.com>"]

rust-version = "1.80"
repository = "https://github.com/robo-corg/porgi"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = "4.5.4"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
dirs = "5.0.1"
eyre = "0.6.12"
fancy-duration = { version = "0.9.2", features = ["chrono"] }
futures = "0.3.30"
git2 = "0.18.3"
ignore = "0.4.22"
ratatui = { version = "0.26.2", features = ["serde"] }
serde = { version = "1.0.200", features = ["derive"] }
shellexpand = "3.1.0"
tokio = { version = "1.39.3", features = ["fs", "macros", "process", "rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
toml = "0.8.12"
which = "6.0.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
